# Nifti_viewer

./: CMakeLists.txt  Controller.cpp  Controller.h  README.md  main.cpp
IPC/: IPC.cpp  IPC.h
niftyWrapper/: nifti2_io.h  niftiReader.cpp  niftiWrapper.cpp  niftiWrapper.h
shell/: sshell.cc  sshell.h
window/: MRIWindow.cpp  MRIWindow.h  ScrollWindow.cpp  ScrollWindow.h
